<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="fitXY"
        android:src="@drawable/center_field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e9824c">

                <Spinner
                    android:id="@+id/team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/teams"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/team_a_logo"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:alpha="0.5"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="56sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ball" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/goal"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whistle" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/foul"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/yellow_card" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="addYellowCardForTeamA"
                    android:text="@string/card"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/team_a_yellow_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/red_card" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="addRedCardForTeamA"
                    android:text="@string/card"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/team_a_red_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e9824c">

                <Spinner
                    android:id="@+id/team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/teams"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/team_b_logo"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:alpha="0.5"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="56sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/goal"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ball" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/foul"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/whistle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/team_b_yellow_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="addYellowCardForTeamB"
                    android:text="@string/card"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/yellow_card" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/team_b_red_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/initial_score"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="addRedCardForTeamB"
                    android:text="@string/card"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/red_card" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#c88"
        android:onClick="resetScore"
        android:padding="16dp"
        android:text="@string/reset" />
</RelativeLayout>